chore: 플러그인 버전 업데이트 및 이름 및 설명 변경

--- a/GASExtension/GASExtension.uplugin
+++ b/GASExtension/GASExtension.uplugin
@@ -1,19 +1,19 @@
 {
 	"FileVersion": 3,
-	"Version": 3,
-	"VersionName": "0.1.2",
-	"FriendlyName": "GASExtension",
-	"Description": "GAS를 편리하게 사용하기 위한 확장 플러그인",
+	"Version": 4,
+	"VersionName": "0.1.3",
+	"FriendlyName": "GAS Framework",
+	"Description": "GAS를 기반으로 게임 제작을 위한 프레임워크",
 	"Category": "GAS",
 	"CreatedBy": "Eu4ng",
 	"CreatedByURL": "https://github.com/Eu4ng",
 	"DocsURL": "",
 	"MarketplaceURL": "",
-	"SupportURL": "",
+	"SupportURL": "https://github.com/E4-Unreal/plugin-gas-extension",
 	"CanContainContent": true,
 	"IsBetaVersion": false,
 	"IsExperimentalVersion": true,
-	"Installed": false,
+	"Installed": true,
 	"Modules": [
 		{
 			"Name": "GASExtension",
