style: 잘못 변경된 내용 수정 및 코어 리디렉트 작성

--- a/GASGameFramework/Config/DefaultGASGameFramework.ini
+++ b/GASGameFramework/Config/DefaultGASGameFramework.ini
@@ -1,2 +1,21 @@
 ﻿[CoreRedirects]
-+ClassRedirects=(OldName="/Script/GASExtension.GGFCharacterStateMachine",NewName="/Script/GASGameFramework.GGFStateMachine")
++PackageRedirects=(OldName="/GASExtension/", NewName="/GASGameFramework/", MatchSubstring=true)
+
++ClassRedirects=(OldName="GEDefaultCharacter",NewName="/Script/GASGameFramework.GGFDefaultCharacter")
++ClassRedirects=(OldName="GECharacterStateMachine",NewName="/Script/GASGameFramework.GGFStateMachine")
++ClassRedirects=(OldName="GEStateMachine",NewName="/Script/GASGameFramework.GGFStateMachine")
++ClassRedirects=(OldName="GEHitScanFireArm",NewName="/Script/GASGameFramework.GGFHitScanFireArm")
++ClassRedirects=(OldName="GEProjectileFireArm",NewName="/Script/GASGameFramework.GGFProjectileFireArm")
++ClassRedirects=(OldName="GEBullet",NewName="/Script/GASGameFramework.GGFBullet")
++ClassRedirects=(OldName="GEExplosiveProjectile",NewName="/Script/GASGameFramework.GGFExplosiveProjectile")
++ClassRedirects=(OldName="GEInputConfig",NewName="/Script/GASGameFramework.GGFInputConfig")
++ClassRedirects=(OldName="GEWA_Fire",NewName="/Script/GASGameFramework.GGFWA_Fire")
++ClassRedirects=(OldName="GEGA_Fire",NewName="/Script/GASGameFramework.GGFWA_Fire")
++ClassRedirects=(OldName="GEAbilityInputBinder",NewName="/Script/GASGameFramework.GGFAbilityInputBinder")
++ClassRedirects=(OldName="GECharacterMovement",NewName="/Script/GASGameFramework.GGFCharacterMovement")
++ClassRedirects=(OldName="GESpringArmComponent",NewName="/Script/GASGameFramework.GGFSpringArmComponent")
++ClassRedirects=(OldName="GEEquipmentManager",NewName="/Script/GASGameFramework.GGFEquipmentManager")
++ClassRedirects=(OldName="GEFirstPersonAnimInstance",NewName="/Script/GASGameFramework.GGFFirstPersonAnimInstance")
++ClassRedirects=(OldName="GEHitEffectDefinition",NewName="/Script/GASGameFramework.GGFHitEffectDefinition")
++ClassRedirects=(OldName="GEHitEffect_Particle",NewName="/Script/GASGameFramework.GGFHitEffect_Particle")
++ClassRedirects=(OldName="GEHitEffect_Sound",NewName="/Script/GASGameFramework.GGFHitEffect_Sound")
