docs: 플러그인 저장소 이름 변경

--- a/GASGameFramework/GASGameFramework.uplugin
+++ b/GASGameFramework/GASGameFramework.uplugin
@@ -3,13 +3,13 @@
 	"Version": 4,
 	"VersionName": "0.1.3",
 	"FriendlyName": "GAS GameFramework",
-	"Description": "GAS를 기반으로 게임 제작을 하기 위한 프레임워크",
+	"Description": "GAS를 기반으로 멀티플레이 게임 제작을 위한 프레임워크입니다.",
 	"Category": "GAS",
 	"CreatedBy": "Eu4ng",
 	"CreatedByURL": "https://github.com/Eu4ng",
 	"DocsURL": "",
 	"MarketplaceURL": "",
-	"SupportURL": "https://github.com/E4-Unreal/plugin-gas-extension",
+	"SupportURL": "https://github.com/E4-Unreal/plugin-gas-gameframework",
 	"CanContainContent": true,
 	"IsBetaVersion": false,
 	"IsExperimentalVersion": true,
