--- a/GASGameFramework.uplugin
+++ b/GASGameFramework.uplugin
@@ -1,13 +1,13 @@
 {
 	"FileVersion": 3,
-	"Version": 4,
-	"VersionName": "0.1.3",
+	"Version": 5,
+	"VersionName": "0.2.0",
 	"FriendlyName": "GAS GameFramework",
 	"Description": "GAS를 기반으로 멀티플레이 게임 제작을 위한 프레임워크입니다.",
 	"Category": "GAS",
 	"CreatedBy": "Eu4ng",
 	"CreatedByURL": "https://github.com/Eu4ng",
-	"DocsURL": "",
+	"DocsURL": "https://github.com/E4-Unreal/plugin-gas-gameframework/releases",
 	"MarketplaceURL": "",
 	"SupportURL": "https://github.com/E4-Unreal/plugin-gas-gameframework",
 	"CanContainContent": true,
