chore: ModularGameplay 플러그인 활성화

--- a/GASGameFramework.uplugin
+++ b/GASGameFramework.uplugin
@@ -23,11 +23,15 @@
 	],
     "Plugins": [
         {
+            "Name": "EnhancedInput",
+            "Enabled": true
+        },
+        {
             "Name": "GameplayAbilities",
             "Enabled": true
         },
         {
-            "Name": "EnhancedInput",
+            "Name": "ModularGameplay",
             "Enabled": true
         }
     ]
