feat: GASExtension 모듈 추가

--- a/GASGameFramework.uplugin
+++ b/GASGameFramework.uplugin
@@ -29,6 +29,11 @@
 			"Name": "GGFInventorySystem",
 			"Type": "Runtime",
 			"LoadingPhase": "Default"
+		},
+		{
+			"Name": "GASExtension",
+			"Type": "Runtime",
+			"LoadingPhase": "Default"
 		}
 	],
 	"Plugins": [
