refactor: GGFTPSSample 모듈 이름 변경 (TPSSample)

--- a/GASGameFramework.uplugin
+++ b/GASGameFramework.uplugin
@@ -35,7 +35,7 @@
 			"LoadingPhase": "Default"
 		},
 		{
-			"Name": "GGFTPSSample",
+			"Name": "TPSSample",
 			"Type": "Runtime",
 			"LoadingPhase": "Default"
 		}
