chore: 플러그인 종속성 추가
## 추가
- LyraContent

--- a/GASGameFramework.uplugin
+++ b/GASGameFramework.uplugin
@@ -58,18 +58,22 @@
 			"Name": "ModularGameplay",
 			"Enabled": true
 		},
-		{
-			"Name": "ParagonBelica",
-			"Enabled": true
-		},
+        {
+            "Name": "LevelPrototyping",
+            "Enabled": true
+        },
 		{
 			"Name": "UnrealMannequins",
 			"Enabled": true
 		},
-		{
-			"Name": "LevelPrototyping",
-			"Enabled": true
-		}
+        {
+            "Name": "LyraContent",
+            "Enabled": true
+        },
+        {
+            "Name": "ParagonBelica",
+            "Enabled": true
+        }
 	],
 	"Installed": false
 }
