chore: E4 Effects 플러그인 종속성 추가

--- a/GASGameFramework.uplugin
+++ b/GASGameFramework.uplugin
@@ -83,6 +83,10 @@
 		{
 			"Name": "ParagonBelica",
 			"Enabled": true
+		},
+		{
+			"Name": "E4Effects",
+			"Enabled": true
 		}
 	],
 	"Installed": false
