feat: 상호작용 시스템 구축 (#7)
* chore: GGFInteractionSystem 모듈 추가

* feat: GGFInteractableInterface 인터페이스 및 GGFInteractableActor 클래스 작성

* feat: 상호작용 가능한 상태를 위한 게임플레이 태그 추가

* feat: GEGameplayState 클래스에 Tick 기능 추가

- bActivated 잘못된 설정 수정

* feat: 상호작용 가능한 오브젝트 감지를 위한 상태 클래스 작성

* refactor: 상호작용 관련 게임플레이 태그 정의 위치 변경

* feat: 상호작용을 위한 어빌리티 및 어빌리티 태스크 작성

* feat: GASGameFramework에서 작성된 기본 어빌리티가 설정되어있는 플레이어 전용 ASC

* fix: 상호작용 가능한 오브젝트 감지를 위해 작성했던 상태 클래스 제거

* fix: 다른 플레이어 관련 액터는 무시하도록 설정

* fix: 상호작용 가능한 오브젝트 탐색 로직에서 SweepMultiByChannel을 SweepMultiByObjectType로 변경

SweepMultiByChannel은 지정된 트레이스 채널에 걸린 것이 Block (블록)인 경우, 그 항목 하나만 받게 되기 때문에 적절하지 않습니다.

* chore: 상호작용 관련 샘플 에셋 생성

* refactor: GGFInteractableActor 클래스 세분화

- GGFInteractableActorBase 클래스 추가
- GGFInteractableActor 클래스에 OnPlayerPawnBeginOverlap, OnPlayerPawnBeginOverlap 메서드 추가

* feat: 상호작용 시 UI 화면을 띄워주는 기능이 추가된 InteractableActor 클래스 작성

* chore: 상호작용 관련 게임플레이 태그 추가

* refactor: 플레이어 폰과 로컬 플레이어 폰 로직 분리

- UI처럼 로컬 플레이어에게만 호출되는 메서드를 따로 관리할 필요가 있습니다.
- 상호작용 어빌리티에서 NetRole을 검사하는 대신 상호작용 오브젝트에 위임하였습니다.

* chore: InteractableActorWithUI 관련 샘플 에셋 제작

* fix: 캔버스 클릭 시 포커스가 풀리는 문제 해결 및 UI 입력 분리

* fix: GameplayTags 헤더 문제 해결

(cherry picked from commit a9600ff535974e55b69db003cf2e276a085071c5)

* chore: E4 Effects 플러그인 종속성 추가

* feat: 상호작용 관련 위젯 클래스 관련 작업

* fix: Interacting 상태 태그 오타 수정

* chore: 폭발물 샘플 에셋 로직 수정

- 이펙트 스폰 로직을 OnDestroyed로 이전

--- a/GASGameFramework.uplugin
+++ b/GASGameFramework.uplugin
@@ -48,6 +48,11 @@
 			"Name": "GGFShooterCore",
 			"Type": "Runtime",
 			"LoadingPhase": "Default"
+		},
+		{
+			"Name": "GGFInteractionSystem",
+			"Type": "Runtime",
+			"LoadingPhase": "Default"
 		}
 	],
 	"Plugins": [
@@ -77,6 +82,10 @@
 		},
 		{
 			"Name": "ParagonBelica",
+			"Enabled": true
+		},
+		{
+			"Name": "E4Effects",
 			"Enabled": true
 		}
 	],
