--- a/GASGameFramework.uplugin
+++ b/GASGameFramework.uplugin
@@ -53,6 +53,11 @@
 			"Name": "GGFInteractionSystem",
 			"Type": "Runtime",
 			"LoadingPhase": "Default"
+		},
+		{
+			"Name": "SteamExtension",
+			"Type": "Runtime",
+			"LoadingPhase": "Default"
 		}
 	],
 	"Plugins": [
