chore: 캐릭터 및 스킨 데이터 테이블에 Belica 에셋 추가

--- a/Config/DefaultGASGameFramework.ini
+++ b/Config/DefaultGASGameFramework.ini
@@ -1,25 +1,6 @@
-﻿[/Script/GGFItemSystem.GGFItemSystemSetting]
+﻿[/Script/GGFDataSystem.GGFDataSystemSetting]
+DefinitionDataTableMap=(("/Script/CoreUObject.Class'/Script/GGFCharacterSystem.GGFCharacterDefinition'", "/GASGameFramework/Data/DT_GGFCharacterDefinition.DT_GGFCharacterDefinition"),("/Script/CoreUObject.Class'/Script/GGFCharacterSystem.GGFCharacterSkinDefinition'", "/GASGameFramework/Data/DT_GGFCharacterSkinDefinition.DT_GGFCharacterSkinDefinition"))
+
+[/Script/GGFItemSystem.GGFItemSystemSetting]
 ItemDataTable=/Game/AutoWorld/Data/DT_Item.DT_Item
 ItemConfigDataTableMap=(("/Script/CoreUObject.Class'/Script/GGFItemSystem.GGFItemConfig_Pickup'", "/Game/AutoWorld/Data/DT_Pickup.DT_Pickup"))
-
-[CoreRedirects]
-+PackageRedirects=(OldName="/GASExtension/", NewName="/GASGameFramework/", MatchSubstring=true)
-
-+ClassRedirects=(OldName="GEDefaultCharacter",NewName="/Script/GASGameFramework.GGFDefaultCharacter")
-+ClassRedirects=(OldName="GECharacterStateMachine",NewName="/Script/GASGameFramework.GGFStateMachine")
-+ClassRedirects=(OldName="GEStateMachine",NewName="/Script/GASGameFramework.GGFStateMachine")
-+ClassRedirects=(OldName="GEHitScanFireArm",NewName="/Script/GASGameFramework.GGFHitScanFireArm")
-+ClassRedirects=(OldName="GEProjectileFireArm",NewName="/Script/GASGameFramework.GGFProjectileFireArm")
-+ClassRedirects=(OldName="GEBullet",NewName="/Script/GASGameFramework.GGFBullet")
-+ClassRedirects=(OldName="GEExplosiveProjectile",NewName="/Script/GASGameFramework.GGFExplosiveProjectile")
-+ClassRedirects=(OldName="GEInputConfig",NewName="/Script/GASGameFramework.GGFInputConfig")
-+ClassRedirects=(OldName="GEWA_Fire",NewName="/Script/GASGameFramework.GGFWA_Fire")
-+ClassRedirects=(OldName="GEGA_Fire",NewName="/Script/GASGameFramework.GGFWA_Fire")
-+ClassRedirects=(OldName="GEAbilityInputBinder",NewName="/Script/GASGameFramework.GGFAbilityInputBinder")
-+ClassRedirects=(OldName="GECharacterMovement",NewName="/Script/GASGameFramework.GGFCharacterMovement")
-+ClassRedirects=(OldName="GESpringArmComponent",NewName="/Script/GASGameFramework.GGFSpringArmComponent")
-+ClassRedirects=(OldName="GEEquipmentManager",NewName="/Script/GASGameFramework.GGFEquipmentManager")
-+ClassRedirects=(OldName="GEFirstPersonAnimInstance",NewName="/Script/GASGameFramework.GGFFirstPersonAnimInstance")
-+ClassRedirects=(OldName="GEHitEffectDefinition",NewName="/Script/GASGameFramework.GGFHitEffectDefinition")
-+ClassRedirects=(OldName="GEHitEffect_Particle",NewName="/Script/GASGameFramework.GGFHitEffect_Particle")
-+ClassRedirects=(OldName="GEHitEffect_Sound",NewName="/Script/GASGameFramework.GGFHitEffect_Sound")
