chore: Paragon Wraith 캐릭터 및 스킨 정보 입력

--- a/GASGameFramework.uplugin
+++ b/GASGameFramework.uplugin
@@ -94,6 +94,10 @@
 			"Name": "ParagonBelica",
 			"Enabled": true
 		},
+        {
+            "Name": "ParagonWraith",
+            "Enabled": true
+        },
 		{
 			"Name": "E4Effects",
 			"Enabled": true
