chore: GGFCore 모듈추가

--- a/GASGameFramework.uplugin
+++ b/GASGameFramework.uplugin
@@ -19,6 +19,21 @@
 			"Type": "Runtime",
 			"LoadingPhase": "Default"
 		},
+        {
+            "Name": "GGFCore",
+            "Type": "Runtime",
+            "LoadingPhase": "PreDefault"
+        },
+        {
+            "Name": "GASExtension",
+            "Type": "Runtime",
+            "LoadingPhase": "PreDefault"
+        },
+        {
+            "Name": "GGFDataSystem",
+            "Type": "Runtime",
+            "LoadingPhase": "PreDefault"
+        },
 		{
 			"Name": "GGFItemSystem",
 			"Type": "Runtime",
@@ -26,11 +41,6 @@
 		},
 		{
 			"Name": "GGFInventorySystem",
-			"Type": "Runtime",
-			"LoadingPhase": "PreDefault"
-		},
-		{
-			"Name": "GASExtension",
 			"Type": "Runtime",
 			"LoadingPhase": "PreDefault"
 		},
@@ -56,11 +66,6 @@
 		},
 		{
 			"Name": "GGFCharacterSystem",
-			"Type": "Runtime",
-			"LoadingPhase": "PreDefault"
-		},
-		{
-			"Name": "GGFDataSystem",
 			"Type": "Runtime",
 			"LoadingPhase": "PreDefault"
 		},
