style: GGFCombatCore 모듈 이름을 GGFCombatSystem으로 변경

--- a/GASGameFramework.uplugin
+++ b/GASGameFramework.uplugin
@@ -70,7 +70,7 @@
 			"LoadingPhase": "PreDefault"
 		},
 		{
-			"Name": "GGFCombatCore",
+			"Name": "GGFCombatSystem",
 			"Type": "Runtime",
 			"LoadingPhase": "PreDefault"
 		},
