--- a/Config/DefaultGASGameFramework.ini
+++ b/Config/DefaultGASGameFramework.ini
@@ -3,3 +3,6 @@ DefinitionDataTableMap=(("/Script/CoreUObject.Class'/Script/GGFCharacterSystem.G
 
 [/Script/GGFCore.GGFCoreSetting]
 DamageImmunityMap=(((Tag=(TagName="Data.Damage.Type.Test")), (Tag=(TagName="State.Buff.Immunity.Test"))),((Tag=(TagName="Data.Damage.Type.Physical")), (Tag=(TagName="State.Buff.Immunity.Physical"))),((Tag=(TagName="Data.Damage.Type.Fire")), (Tag=(TagName="State.Buff.Immunity.Fire"))),((Tag=(TagName="Data.Damage.Type.Water")), (Tag=(TagName="State.Buff.Immunity.Water"))),((Tag=(TagName="Data.Damage.Type.Electricity")), (Tag=(TagName="State.Buff.Immunity.Electricity"))),((Tag=(TagName="Data.Damage.Type.Ice")), (Tag=(TagName="State.Buff.Immunity.Ice"))))
+
+[CoreRedirects]
++PropertyRedirects=(OldName="/Script/GGFGimmickSystem.GGFTriggerComponent.Targets",NewName="/Script/GGFGimmickSystem.GGFTriggerComponent.TargetsToActivate")
